review & edit Methods S2 (no edits needed) and S3
@NidhiVinod , I edited S3, including taking out some content that's beyond what anyone would need to know to make this reproducible.

Two action items for you:
1. I'm confused by the description of search terms. There's a general list and then a separate list for each search engine. Can you please clarify?
2. Please verify the final total number of records in the tables (currently 70).

--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -115,23 +115,34 @@ In each visual, all biophysical variables are constant except for the independen
 \newpage
 # `r appendix_lit_review_methods_title`
 
-## Identification of relevant studies
+To summarize vertical gradients in leaf traits and gas exchange (Tables 1-2), we search the literature for relevant studies and recorded results from all studies meeting our criteria for inclusion.
 
-Relevant studies were searched in the databases: ISI Web of Science, Smithsonian online library and Google Scholar, using the following key terms: (leaf traits OR foliar traits) AND (inter-canopy OR intra-canopy OR canopy height) AND (e.g. chlorophyll OR e.g. LMA OR stomatal conductance); (leaf temperature and metabolism OR leaf thermal sensitivity  OR leaf thermal tolerance OR leaf traits OR foliar traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy height OR canopy gradient OR canopy profile OR canopy position) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical); (leaf* temperature* and metabolism OR leaf thermal* sensitivity  OR leaf thermal tolerance OR leaf* traits OR foliar* traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy* height OR canopy gradient OR canopy profile) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical).
+The studies included in the review were based on a global geographic scope. 
+Ecosystem types included any studies with trees for mostly forests, but savannas were also considered. Herbaceous plant studies and seedling studies were excluded. 
+We targeted studies examining variation in foliar traits and metabolism across independent variables of sun/shade or height (where height is generally also sun/shade). 
+Dependent variables of interest included variables known to influence leaf temperature or metabolism: i.e., anatomical, biochemical, and structural foliar traits;  gas exchange, metabolism, and thermal sensitivity variables. 
 
-in Google Scholar, 600 articles were screened, using the key terms (leaf temperature and metabolism OR leaf thermal sensitivity  OR leaf thermal tolerance OR leaf traits OR foliar traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy height OR canopy gradient OR canopy profile OR canopy position) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical). After screening the title and reading the abstract, 185 articles were most relevant. Herbaceous plant studies and seedling studies were excluded. These articles were added into Zotero folders: Leaf traits;  Leaf Metabolism and Processes, accordingly, for further careful reading.
+## Databases, search terms, and numbers of studies reviewed
 
-Similar search was conducted with the Smithsonian online library with the key terms (leaf traits OR foliar traits) AND (inter-canopy OR intra-canopy OR canopy height) AND (e.g. chlorophyll OR e.g. LMA OR stomatal conductance) provided most relevant results among the set of keywords mentioned above, with the field refine function that included botany, ecology, biology, environmental sciences, and forestry. Out of 150 relevant articles screened, 26 were most relevant after screening the title and reading the abstract, out of which 22 were already acquired through Google scholar search, 4 new articles were added to the folder. 
+We searched for relevant studies using ISI Web of Science, Smithsonian online library, and Google Scholar, with the following key terms: 
 
-For ISI Web of Science, search the key terms (leaf* temperature* and metabolism OR leaf thermal* sensitivity  OR leaf thermal tolerance OR leaf* traits OR foliar* traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy* height OR canopy gradient OR canopy profile) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical) yielded 410 relevant results, 37 were most relevant after screening the title and reading the abstract, out of which 24 were already acquired through the above process, 13 new articles were added to Zotero folders.
+- (leaf traits OR foliar traits) AND (inter-canopy OR intra-canopy OR canopy height) AND (e.g. chlorophyll OR e.g. LMA OR stomatal conductance)
+- (leaf temperature and metabolism OR leaf thermal sensitivity  OR leaf thermal tolerance OR leaf traits OR foliar traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy height OR canopy gradient OR canopy profile OR canopy position) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical)
+- (leaf* temperature* and metabolism OR leaf thermal* sensitivity  OR leaf thermal tolerance OR leaf* traits OR foliar* traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy* height OR canopy gradient OR canopy profile) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical).
 
-Through the above process, 202 articles were acquired into Zotero folders. The articles were tagged after careful reading of each as added to the table, irrelevant to the table, but relevant to the reviewed (with a note on the reason), irrelevant to the table and the review (with a note on the reason for exclusion). Articles that were not yet carefully read were tagged yet to read, which will be tagged as one of the above after reading. Articles shared by co-authors and references mentioned in other studies collectively were ~>32 studies. So far 70 relevant articles are added into the tables
+In Google Scholar, 600 articles were screened, using the key terms (leaf temperature and metabolism OR leaf thermal sensitivity  OR leaf thermal tolerance OR leaf traits OR foliar traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy height OR canopy gradient OR canopy profile OR canopy position) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical). After screening the title and reading the abstract, 185 articles were identified as most relevant and saved for further careful reading.
 
-## Criteria for inclusion 
+Similar search was conducted with the Smithsonian online library with the key terms (leaf traits OR foliar traits) AND (inter-canopy OR intra-canopy OR canopy height) AND (e.g. chlorophyll OR e.g. LMA OR stomatal conductance) provided most relevant results among the set of keywords mentioned above, with the field refine function that included botany, ecology, biology, environmental sciences, and forestry. Out of 150 relevant articles screened, 26 were most relevant after screening the title and reading the abstract, out of which 22 were already acquired through Google scholar search, such that 4 new articles were added. 
 
-**this is outlined [here](https://github.com/EcoClimLab/vertical-thermal-review/blob/master/Lit_Review/Methods%20for%20Systematic%20review%20for%20the%20tables.docx). Section needs to be written.**
+For ISI Web of Science, a search of the key terms (leaf* temperature* and metabolism OR leaf thermal* sensitivity  OR leaf thermal tolerance OR leaf* traits OR foliar* traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy* height OR canopy gradient OR canopy profile) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical) yielded 410 relevant results. Of these, 37 were most relevant after screening the title and reading the abstract, out of which 24 were already acquired through the above process, such that 13 new articles were added.
 
-The studies included in the review were based on a global geographic scope. Ecosystem types included any studies with trees for mostly forests, but savannas were also considered. Information for leaf traits and metabolism included studies with independent variables: sun/shade vs height (where height is generally also sun/shade), and dependent variables of interest were based on variables known to influence leaf temperature ie. anatomical, biochemical, structural foliar traits, including gas exchange, metabolism and thermal sensitivity variables. 
+Through the above process, 202 articles were saved for careful evaluation. To this, articles shared by co-authors and references mentioned in other studies collectively added 32 studies. 
+
+The articles were tagged after careful reading of each as added to the tables, irrelevant to the tables but relevant to the review (with a note on the reason), or irrelevant to the table and the review (with a note on the reason for exclusion). 
+
+In total, following careful review, we identified **70** articles as relevant and included their results in Tables 1-2.
+
+
 
 \newpage
  # `r NEON_sites_legend`
