citations and ty, marielle's suggestions

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1885,6 +1885,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\K7R46L5X\\Condit et al. - 2000 - Quantifying the deciduousness of tropical forest c.pdf}
 }
 
+@article{copoloviciCapacityThermalProtection2005,
+  title = {The {{Capacity}} for {{Thermal Protection}} of {{Photosynthetic Electron Transport Varies}} for {{Different Monoterpenes}} in {{Quercus}} Ilex},
+  author = {Copolovici, Lucian O. and Filella, Iolanda and Llusià, Joan and Niinemets, Ülo and Peñuelas, Josep},
+  date = {2005-09},
+  journaltitle = {Plant Physiol},
+  volume = {139},
+  number = {1},
+  eprint = {16126854},
+  eprinttype = {pmid},
+  pages = {485--496},
+  issn = {0032-0889},
+  doi = {10.1104/pp.105.065995},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1203397/},
+  urldate = {2021-10-01},
+  abstract = {Heat stress resistance of foliar photosynthetic apparatus was investigated in the Mediterranean monoterpene-emitting evergreen sclerophyll species Quercus ilex. Leaf feeding with fosmidomycin, which is a specific inhibitor of the chloroplastic isoprenoid synthesis pathway, essentially stopped monoterpene emission and resulted in the decrease of the optimum temperature of photosynthetic electron transport from approximately 38°C to approximately 30°C. The heat stress resistance was partly restored by fumigation with 4 to 5 nmol mol−1 air concentrations of monoterpene α-pinene but not with fumigations with monoterpene alcohol α-terpineol. Analyses of monoterpene physicochemical characteristics demonstrated that α-pinene was primarily distributed to leaf gas and lipid phases, while α-terpineol was primarily distributed to leaf aqueous phase. Thus, for a common monoterpene uptake rate, α-terpineol is less efficient in stabilizing membrane liquid-crystalline structure and as an antioxidant in plant membranes. Furthermore, α-terpineol uptake rate (U) strongly decreased with increasing temperature, while the uptake rates of α-pinene increased with increasing temperature, providing a further explanation of the lower efficiency of thermal protection by α-terpineol. The temperature-dependent decrease of α-terpineol uptake was both due to decreases in stomatal conductance, gw, and increased volatility of α-terpineol at higher temperature that decreased the monoterpene diffusion gradient between the ambient air (FA) and leaf (FI; U = gw[FA − FI]). Model analyses suggested that α-pinene reacted within the leaf at higher temperatures, possibly within the lipid phase, thereby avoiding the decrease in diffusion gradient, FA − FI. Thus, these data contribute to the hypothesis of the antioxidative protection of leaf membranes during heat stress by monoterpenes. These data further suggest that fumigation with the relatively low atmospheric concentrations of monoterpenes that are occasionally observed during warm windless days in the Mediterranean canopies may significantly improve the heat tolerance of nonemitting vegetation that grows intermixed with emitting species.},
+  pmcid = {PMC1203397},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\4AN5LLTX\\Copolovici et al. - 2005 - The Capacity for Thermal Protection of Photosynthe.pdf}
+}
+
 @article{corlettImpactsWarmingTropical2011,
   title = {Impacts of Warming on Tropical Lowland Rainforests},
   author = {Corlett, Richard T.},
@@ -4415,6 +4434,15 @@
   langid = {english},
   keywords = {Anthropogenic climate change,Biodiversity,Climate change,Humidity,Leaves,Solar radiation,Summer,Trees},
   file = {C\:\\Users\\Me\\Zotero\\storage\\556G6RFM\\Keppel et al. - 2017 - Microhabitats and canopy cover moderate high summe.pdf}
+}
+
+@article{kesselmeierBiogenicVolatileOrganic,
+  title = {Biogenic {{Volatile Organic Compounds}} ({{VOC}}): An {{Overview}} on {{Emission}}, {{Physiology}} and {{Ecology}}},
+  author = {Kesselmeier, J and Staudt, M},
+  pages = {66},
+  abstract = {This overview compiles the actual knowledge of the biogenic emissions of some volatile organic compounds (VOCs), i.e., isoprene, terpenes, alkanes, alkenes, alcohols, esters, carbonyls, and acids. We discuss VOC biosynthesis, emission inventories, relations between emission and plant physiology as well as temperature and radiation, and ecophysiological functions. For isoprene and monoterpenes, an extended summary of standard emission factors, with data related to the plant genus and species, is included. The data compilation shows that we have quite a substantial knowledge of the emission of isoprene and monoterpenes, including emission rates, emission regulation, and biosynthesis. The situation is worse in the case of numerous other compounds (other VOCs or OVOCs) being emitted by the biosphere. This is reflected in the insufficient knowledge of emission rates and biological functions. Except for the terpenoids, only a limited number of studies of OVOCs are available; data are summarized for alkanes, alkenes, carbonyls, alcohols, acids, and esters. In addition to closing these gaps of knowledge, one of the major objectives for future VOC research is improving our knowledge of the fate of organic carbon in the atmosphere, ending up in oxidation products and/or as aerosol particles.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RAJMNDGM\\Kesselmeier and Staudt - Biogenic Volatile Organic Compounds (VOC) An Over.pdf}
 }
 
 @article{kikuzawaSynthesisRelationshipsLeaf2006,
@@ -8328,6 +8356,22 @@
   isbn = {978-1-4419-0025-8}
 }
 
+@article{riedlmeierMonoterpenesSupportSystemic2017b,
+  title = {Monoterpenes {{Support Systemic Acquired Resistance}} within and between {{Plants}}},
+  author = {Riedlmeier, Marlies and Ghirardo, Andrea and Wenig, Marion and Knappe, Claudia and Koch, Kerstin and Georgii, Elisabeth and Dey, Sanjukta and Parker, Jane E. and Schnitzler, Jörg-Peter and Vlot, A. Corina},
+  date = {2017-06-01},
+  journaltitle = {The Plant Cell},
+  volume = {29},
+  number = {6},
+  pages = {1440--1459},
+  issn = {1040-4651},
+  doi = {10.1105/tpc.16.00898},
+  url = {https://doi.org/10.1105/tpc.16.00898},
+  urldate = {2021-10-01},
+  abstract = {This study investigates the role of volatile organic compounds in systemic acquired resistance (SAR), a salicylic acid (SA)-associated, broad-spectrum immune response in systemic, healthy tissues of locally infected plants. Gas chromatography coupled to mass spectrometry analyses of SAR-related emissions of wild-type and non-SAR-signal-producing mutant plants associated SAR with monoterpene emissions. Headspace exposure of Arabidopsis thaliana to a mixture of the bicyclic monoterpenes α-pinene and β-pinene induced defense, accumulation of reactive oxygen species, and expression of SA- and SAR-related genes, including the SAR regulatory AZELAIC ACID INDUCED1 (AZI1) gene and three of its paralogs. Pinene-induced resistance was dependent on SA biosynthesis and signaling and on AZI1. Arabidopsis geranylgeranyl reductase1 mutants with reduced monoterpene biosynthesis were SAR-defective but mounted normal local resistance and methyl salicylate-induced defense responses, suggesting that monoterpenes act in parallel with SA. The volatile emissions from SAR signal-emitting plants induced defense in neighboring plants, and this was associated with the presence of α-pinene, β-pinene, and camphene in the emissions of the “sender” plants. Our data suggest that monoterpenes, particularly pinenes, promote SAR, acting through ROS and AZI1, and likely function as infochemicals in plant-to-plant signaling, thus allowing defense signal propagation between neighboring plants.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\HHPDHISV\\Riedlmeier et al. - 2017 - Monoterpenes Support Systemic Acquired Resistance .pdf;C\:\\Users\\Me\\Zotero\\storage\\MPRENTRW\\6099413.html}
+}
+
 @article{rijkersEffectTreeHeight2000a,
   title = {The Effect of Tree Height and Light Availability on Photosynthetic Leaf Traits of Four Neotropical Species Differing in Shade Tolerance},
   author = {Rijkers, T. and Pons, T. L. and Bongers, F.},
@@ -10815,6 +10859,26 @@
   url = {https://www-jstor-org.smithsonian.idm.oclc.org/stable/43582137?seq=1#metadata_info_tab_contents},
   urldate = {2021-03-29},
   file = {C\:\\Users\\Me\\Zotero\\storage\\P3U8ERY9\\43582137.html}
+}
+
+@article{vickersUnifiedMechanismAction2009,
+  title = {A Unified Mechanism of Action for Volatile Isoprenoids in Plant Abiotic Stress},
+  author = {Vickers, Claudia E. and Gershenzon, Jonathan and Lerdau, Manuel T. and Loreto, Francesco},
+  date = {2009-05},
+  journaltitle = {Nat Chem Biol},
+  volume = {5},
+  number = {5},
+  pages = {283--291},
+  publisher = {{Nature Publishing Group}},
+  issn = {1552-4469},
+  doi = {10.1038/nchembio.158},
+  url = {https://www.nature.com/articles/nchembio.158},
+  urldate = {2021-10-01},
+  abstract = {The sessile nature of plants has resulted in the evolution of an extraordinarily diverse suite of protective mechanisms against biotic and abiotic stresses. Though volatile isoprenoids are known to be involved in many types of biotic interactions, they also play important but relatively unappreciated roles in abiotic stress responses. We review those roles, discuss the proposed mechanistic explanations and examine the evolutionary significance of volatile isoprenoid emission. We note that abiotic stress responses generically involve production of reactive oxygen species in plant cells, and volatile isoprenoids mitigate the effects of oxidative stress by mediating the oxidative status of the plant. On the basis of these observations, we propose a 'single biochemical mechanism for multiple physiological stressors' model, whereby the protective effect against abiotic stress is exerted through direct or indirect improvement in resistance to damage by reactive oxygen species.},
+  issue = {5},
+  langid = {english},
+  annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Reviews},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\QQTGHQ3B\\Vickers et al. - 2009 - A unified mechanism of action for volatile isopren.pdf;C\:\\Users\\Me\\Zotero\\storage\\SRJUPQP4\\nchembio.html}
 }
 
 @article{vitasseEarlierLeafoutRather2014,
