--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -291,9 +291,8 @@ Higher photosynthetic rates (per unit leaf area) and more frequent stomatal clos
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
 Carotenoids (e.g., beta carotene and lutein), including xanthophyll cycle pigments (i.e., violaxanthin, antheraxanthin and zeaxanthin, VAZ), can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
 The dissipation of excess light energy is also important for leaf acclimation to higher temperatures if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996]. 
-
-Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; **REF ON MONOTERPENES?**]. 
-Less than half of tree species express significant light-dependent emissions (REFS; Taylor et al., 2018), such that variation in emissions across the vertical profile can be influenced both by vertical variation in species compositions (see section 3.2) and plasticity in emission rate capacities [see section 4.4, @taylorNewFieldInstrument2021].
+Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017b]. 
+Less than half of tree species express significant light-dependent emissions [@kesselmeierBiogenicVolatileOrganic; @taylorIsopreneEmissionStructures2018a], such that variation in emissions across the vertical profile can be influenced both by vertical variation in species compositions (see section 3.2) and plasticity in emission rate capacities [see section 4.4, @taylorNewFieldInstrument2021].
 
 The vertical structure of microenvironments likely influences forest photosynthetic capacity [@rey-sanchez_spatial_2016] via leaf phenology. 
 In deciduous forests, the timing and extent of seasonal leaf gain and loss is structured across the vertical profile. 
