--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4973,6 +4973,25 @@
   keywords = {cold and heat,hardening,latitude,macrophysiology,temperature}
 }
 
+@article{laothawornkitkulBiogenicVolatileOrganic2009,
+  title = {Biogenic Volatile Organic Compounds in the {{Earth}} System},
+  author = {Laothawornkitkul, Jullada and Taylor, Jane E. and Paul, Nigel D. and Hewitt, C. Nicholas},
+  date = {2009},
+  journaltitle = {New Phytologist},
+  volume = {183},
+  number = {1},
+  pages = {27--51},
+  issn = {1469-8137},
+  doi = {10.1111/j.1469-8137.2009.02859.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8137.2009.02859.x},
+  urldate = {2021-10-01},
+  abstract = {Biogenic volatile organic compounds produced by plants are involved in plant growth, development, reproduction and defence. They also function as communication media within plant communities, between plants and between plants and insects. Because of the high chemical reactivity of many of these compounds, coupled with their large mass emission rates from vegetation into the atmosphere, they have significant effects on the chemical composition and physical characteristics of the atmosphere. Hence, biogenic volatile organic compounds mediate the relationship between the biosphere and the atmosphere. Alteration of this relationship by anthropogenically driven changes to the environment, including global climate change, may perturb these interactions and may lead to adverse and hard-to-predict consequences for the Earth system. Contents Summary 27 I. Introduction 27 II. Regulation of BVOC emission 30 III. Roles of BVOCs in the Earth system 32 IV. BVOCs in a changing global environment 36 V. Synthesis 44 Acknowledgements 44 References 44},
+  langid = {english},
+  keywords = {atmospheric chemistry,biogenic volatile organic compounds (BVOCs),climate change,global warming,plant defence,plant volatiles,tritrophic interaction},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2009.02859.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MIQ2BBIW\\Laothawornkitkul et al. - 2009 - Biogenic volatile organic compounds in the Earth s.pdf;C\:\\Users\\Me\\Zotero\\storage\\C2JURF3F\\j.1469-8137.2009.02859.html}
+}
+
 @article{larbiCanopyLightHeterogeneity2015,
   title = {Canopy Light Heterogeneity Drives Leaf Anatomical, Eco-Physiological, and Photosynthetic Changes in Olive Trees Grown in a High-Density Plantation},
   author = {Larbi, Ajmi and Vázquez, Saúl and El-Jendoubi, Hamdi and Msallem, Monji and Abadía, Javier and Abadía, Anunciación and Morales, Fermín},
