--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -291,7 +291,7 @@ Increases in chlorophyll a/b ratios with height reflect the greater light availa
 Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure higher (see "Leaf gas exchange and its thermal sensitivity" section, Table `r table_leaf_metabolism`) result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C concentrations in leaf tissues (Table `r table_leaf_traits`).
 
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
-Carotenoids (e.g., beta carotene and lutein), including xanthophyll cycle pigments (i.e., violaxanthin, antheraxanthin and zeaxanthin, VAZ), can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
+Carotenoids (e.g., beta carotene and lutein), including xanthophyll cycle pigments (i.e., violaxanthin, antheraxanthin and zeaxanthin, VAZ), can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
 The dissipation of excess light energy is also important for leaf acclimation to higher temperatures if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996]. 
 Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017b]. 
 Less than half of tree species express significant light-dependent emissions [@kesselmeierBiogenicVolatileOrganic; @taylorIsopreneEmissionStructures2018a], such that variation in emissions across the vertical profile can be influenced both by vertical variation in species compositions (see section 3.2) and plasticity in emission rate capacities [see section 4.4, @taylorNewFieldInstrument2021].
@@ -397,12 +397,16 @@ Overall, however, we currently lack synthetic understanding of how and why the t
 
 ### 4.4. VOC emissions
 
-Emission of the VOC isoprene gas from tree leaves is a temperature-sensitive process associated with photosynthetic thermal tolerance [@taylorCapacityEmitIsoprene2019; @sharkeyIsopreneEmissionPlants2008], and within species, emission rates tend to increase toward brighter and hotter microenvironments [@niinemetsEmissionFactorVolatile2010]. 
+Emission of the VOC isoprene gas from tree leaves is a temperature-sensitive process associated with photosynthetic thermal tolerance , and within species, emission rates tend to increase toward brighter and hotter microenvironments [@niinemetsEmissionFactorVolatile2010]. 
 Across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests [@taylorIsopreneEmissionStructures2018a].
 In contrast, vertical structuring of leaf isoprene emissions within forests may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average.
 The observation that both the abundance of emitting species (Table 1) and average emission rates were highest in the mid-canopy region of an Amazonian forest [@taylorNewFieldInstrument2021] -- as opposed to the the hotter and brighter upper canopy-- is consistent with the hypothesis that temperature sensitive isoprene emissions enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. 
 Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function will be important for resolving the role of isoprenes in forest thermal sensitivity across the vertical gradient.
 In the meantime, our best understannding is that isoprenes are important for mid-canopy thermal regulation, but that other traits are more important in the most sun-exposed canopy leaves.
+
+Emission of the VOCs isoprene and a diversity of monoterpenes are similarly light and temperature sensitive, and are evidenced to play similar roles in photosynthetic thermal tolerance [@taylorCapacityEmitIsoprene2019; @sharkeyIsopreneEmissionPlants2008; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005]. In contrast to VOCs stored in oils that are released passively by heat and wounding, such as the monoterpenes responsible for pine scent, light-dependent emissions are linked to photosynthetic substrate supply and are dynamically tuned to environmental and metabolic conditions as a component of metabolic regulatory processes [@monsonLeafIsopreneEmission2021; @laothawornkitkulBiogenicVolatileOrganic2009]. Due to its much higher emission rates and relative ease of detectability, isoprene has received far more study in the field, though both classes of VOC are expressed by a wide diversity of angiosperms and gymnosperms across all biomes of the globe (see Taylor et al,. 2021 and references therein). 
+Within species, isoprene emission rates tend to increase toward brighter and hotter microenvironments (Niinemets et al., 2010), and across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests (Taylor et al., 2018). However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy region of an Amazonian forest (Taylor et al., 2021). Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface (REF). This pattern may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average. Temperature sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region (see section 1, Sharkey et al., 2008). Future work seeking to understand how temporal dynamics of leaf heating (see Leigh et al., 2017) vary through the canopy and influence leaf function will be important for resolving the role of VOCs  in forest thermal sensitivity across the vertical gradient. Given current understanding, we may hypothesize that light-dependent VOC emissions are important for mid-canopy thermal responses, while other traits play the same role in sun-exposed canopy leaves.
+
 
 *add something on monoterpenes?*
 
