--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4146,6 +4146,12 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\4CAFHSYJ\\91716.html}
 }
 
+@online{IsopreneNewInsights,
+  title = {Isoprene: New Insights into the Control of Emission and Mediation of Stress Tolerance by Gene Expression - {{Lantz}} - 2019 - {{Plant}}, {{Cell}} \&amp; {{Environment}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/pce.13629},
+  urldate = {2021-10-01}
+}
+
 @book{jarvisSingleStomaSingle,
   title = {A. {{The Single Stoma}}. {{B}}. {{The Single Leaf}}.},
   author = {Jarvis, P. G. and Mcnaughton, K. G. and The, C. and Plant, Individual},
