--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -594,6 +594,9 @@ Funding was provided by the Smithsonian Institution.
 ## Author Contributions
 NV and KAT planned and designed the research, with contributions from all authors. NV reviewed the literature. NV, IM, EMO and MNS contributed data and analyses. All authors contributed to writing and revising of the manuscript.
 
+## Data Availability
+No new data were created in this study. New analyses are based upon data available from the National Ecological Observatory Network (NEON; https://www.neonscience.org/). The R scripts used for new analyses presented here are available from the authors upon reasonable request. 
+
 ## SI files
 
 `r appendix_NEON_methods_title`
