--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -397,15 +397,8 @@ Overall, however, we currently lack synthetic understanding of how and why the t
 
 ### 4.4. VOC emissions
 
-Emission of the VOC isoprene gas from tree leaves is a temperature-sensitive process associated with photosynthetic thermal tolerance , and within species, emission rates tend to increase toward brighter and hotter microenvironments [@niinemetsEmissionFactorVolatile2010]. 
-Across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests [@taylorIsopreneEmissionStructures2018a].
-In contrast, vertical structuring of leaf isoprene emissions within forests may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average.
-The observation that both the abundance of emitting species (Table 1) and average emission rates were highest in the mid-canopy region of an Amazonian forest [@taylorNewFieldInstrument2021] -- as opposed to the the hotter and brighter upper canopy-- is consistent with the hypothesis that temperature sensitive isoprene emissions enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. 
-Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function will be important for resolving the role of isoprenes in forest thermal sensitivity across the vertical gradient.
-In the meantime, our best understannding is that isoprenes are important for mid-canopy thermal regulation, but that other traits are more important in the most sun-exposed canopy leaves.
-
-Emission of the VOCs isoprene and a diversity of monoterpenes are similarly light and temperature sensitive, and are evidenced to play similar roles in photosynthetic thermal tolerance [@taylorCapacityEmitIsoprene2019; @sharkeyIsopreneEmissionPlants2008; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005]. In contrast to VOCs stored in oils that are released passively by heat and wounding, such as the monoterpenes responsible for pine scent, light-dependent emissions are linked to photosynthetic substrate supply and are dynamically tuned to environmental and metabolic conditions as a component of metabolic regulatory processes [@monsonLeafIsopreneEmission2021; @laothawornkitkulBiogenicVolatileOrganic2009; @lantzIsopreneNewInsights2019; @riedlmeierMonoterpenesSupportSystemic2017b]. Due to its much higher emission rates and relative ease of detectability, isoprene has received far more study in the field, though both classes of VOC are expressed by a wide diversity of angiosperms and gymnosperms across all biomes of the globe (see Taylor et al,. 2021 and references therein). 
-Within species, isoprene emission rates tend to increase toward brighter and hotter microenvironments (Niinemets et al., 2010), and across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests (Taylor et al., 2018). However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy region of an Amazonian forest (Taylor et al., 2021). Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface (REF). This pattern may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average. Temperature sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region (see section 1, Sharkey et al., 2008). Future work seeking to understand how temporal dynamics of leaf heating (see Leigh et al., 2017) vary through the canopy and influence leaf function will be important for resolving the role of VOCs  in forest thermal sensitivity across the vertical gradient. Given current understanding, we may hypothesize that light-dependent VOC emissions are important for mid-canopy thermal responses, while other traits play the same role in sun-exposed canopy leaves.
+Emission of the VOCs isoprene and a diversity of monoterpenes are similarly light and temperature sensitive, and are evidenced to play similar roles in photosynthetic thermal tolerance [@taylorCapacityEmitIsoprene2019; @sharkeyIsopreneEmissionPlants2008; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005]. In contrast to VOCs stored in oils that are released passively by heat and wounding, such as the monoterpenes responsible for pine scent, light-dependent emissions are linked to photosynthetic substrate supply and are dynamically tuned to environmental and metabolic conditions as a component of metabolic regulatory processes [@monsonLeafIsopreneEmission2021; @laothawornkitkulBiogenicVolatileOrganic2009; @lantzIsopreneNewInsights2019; @riedlmeierMonoterpenesSupportSystemic2017b]. Due to its much higher emission rates and relative ease of detectability, isoprene has received far more study in the field, though both classes of VOC are expressed by a wide diversity of angiosperms and gymnosperms across all biomes of the globe [see @taylorNewFieldInstrument2021 and references therein]. 
+Within species, isoprene emission rates tend to increase toward brighter and hotter microenvironments [@niinemetsPhotosynthesisResourceDistribution2007], and across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests [@taylorIsopreneEmissionStructures2018a]. However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy region of an Amazonian forest [@taylorNewFieldInstrument2021]. Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface [@simpragaVerticalCanopyGradient2013]. This pattern may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average. Temperature sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function will be important for resolving the role of VOCs  in forest thermal sensitivity across the vertical gradient. Given current understanding, we may hypothesize that light-dependent VOC emissions are important for mid-canopy thermal responses, while other traits play the same role in sun-exposed canopy leaves.
 
 
 *add something on monoterpenes?*
