--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -308,7 +308,7 @@ Leaf age affects vulnerability to heat stress and has a strong effect on metabol
 
 Vertical gradients in the biophysical environment shape which plant strategies, or sets of traits, are competitive in canopy versus understory conditions, thereby shaping community composition across size classes. 
 Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-species trends in traits and sometimes metabolism [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. 
-For instance, across increasing tree size classes, there is an increase in the fractions of species that are deciduous [mirroring the faction of individuals, @conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018], and a recent inventory in an Amazon forest showed that both the abundance of emitting species and average emission rates were highest in the mid-canopy [see section 4.4, @taylorNewFieldInstrument2021]. 
+For instance, across increasing tree size classes, there is an increase in the fractions of species that are deciduous [mirroring the faction of individuals, @conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018]. 
 However, exceptions exist: at least among evergreen species, shade tolerant species tend to have higher LMA than light demanding species, by contrast with the generally higher LMA for sun than shade leaves within canopies [@luskWhyAreEvergreen2008].
 Further, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. 
 Therefore, vertical gradients in $T_{leaf}$ and metabolism within forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
